# drf

./: .gitignore  db.sqlite3  new.html  new.txt  nltk_download.py  pyproject.toml  pytest.ini  requirements.txt
api_auth/: permissions.py  urls.py
celery_stuff/: celery_app.py  docker-compose.yaml
drf/: __init__.py  celery.py  docker-compose.yaml  fib.py  production_settings.py  settings.py  test_fib.py  urls.py
movies/: admin.py  api.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movies_country_movies_extra_data_movies_release_year.py  0003_userpreferencesmodel.py  0004_movies_directors.py
movies/moviesdownload/: script.py
movies/tasks/: middleware.py
movies/tests/: api_tests.py  conftest.py  factories.py  test_api.py  test_movie_api.py  test_preferences_api.py  test_serializer.py  test_settings.py  test_upload.py  test_watch_history.py
recommendations/: models.py
recommendations/tests/: test_recommendation.py
